manifests/ngnix-test/manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    external-dns.kubernetes.io/hostname: nginx.external-dns-test.homelab.com
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
          name: http
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ngnix-strip-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /ngnix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-ngnix-strip-prefix@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Nginx
    gethomepage.dev/description: Nginx Test
    gethomepage.dev/group: Services
    gethomepage.dev/icon: nginx.png
    gethomepage.dev/href: "https://home.arpa/ngnix"
    gethomepage.dev/pod-selector: "app=nginx"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - home.arpa
  rules:
    - host: home.arpa
      http:
        paths:
          - path: /ngnix
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
